<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom"
          android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_pedido"
          android:icon="@android:drawable/ic_menu_agenda" 
          android:title="@string/action_Informe"          
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/rutas"
          android:icon="@android:drawable/ic_menu_mapmode" 
          android:title="@string/action_rutas"          
          android:showAsAction="ifRoom" />
</menu>
