<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cl.inacap.unidad3.tarea3.activity.ClientesActivity" >
    
    <TextView
        android:id="@+id/lb_nombre_cliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/lb_cliente_nombre" />
    
    <EditText
        android:id="@+id/txt_nombre_cliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_marginBottom="10dp"
        android:ems="10" />

    <TextView
        android:id="@+id/lb_direccion_cliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/lb_cliente_direccion" />    
    
    <EditText
        android:id="@+id/txt_direccion_cliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10" />    
    
	<TextView
        android:id="@+id/lb_telefono_cliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/lb_cliente_telefono" />
    
    
    <EditText
        android:id="@+id/txt_telefono_cliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_marginBottom="10dp"
        android:ems="10" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp" >
        
        <Button
            android:id="@+id/btn_cliente_eliminar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:textSize="14sp"
            android:text="@string/btn_cliente_eliminar"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFFFF"
            android:layout_margin="2dp"/>
        
        <Button
            android:id="@+id/btn_cliente_crear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:textSize="14sp"
            android:text="@string/btn_cliente_crear"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFFFF"
            android:layout_margin="2dp"/>
        
        <Button
            android:id="@+id/btn_cliente_actualizar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:textSize="14sp"
            android:text="@string/btn_cliente_actualizar"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFFFF"
            android:layout_margin="2dp"/>
                   
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_cliente_cancelar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/btn_cliente_cancelar"
        android:background="@drawable/button_style"
        android:textColor="#FFFFFFFF"/>

</LinearLayout>