<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
   	android:paddingLeft="@dimen/activity_horizontal_margin"
   	android:paddingRight="@dimen/activity_horizontal_margin"
   	android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.inacap.unidad3.tarea3.activity.InformeActivity" >

    <ListView
        android:id="@+id/lv_informe"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:layout_weight="0.38"
        android:dividerHeight="1dp" >

    </ListView>

    <TextView
        android:id="@+id/lb_total_pedido"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:gravity="center_vertical|left"
        android:text="@string/total_pedidos"
        android:textSize="12dp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/lb_total_pedido_dig"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:gravity="center_vertical|right"
        android:text="0"
        android:textSize="12dp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/lb_total_entregas"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:gravity="center_vertical|left"
        android:text="@string/total_entregas"
        android:textSize="12dp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/lb_total_entregas_dig"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:gravity="center_vertical|right"
        android:text="0"
        android:textSize="12dp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/lb_saldo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:gravity="center_vertical|left"
        android:text="@string/saldo"
        android:textSize="12dp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/lb_saldo_dig"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:gravity="center_vertical|right"
        android:text="0"
        android:textSize="12dp"
        android:textStyle="bold" />

</LinearLayout>